k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
   
kind: Ingress
   
metadata:
   
  name: example-ingress
   
  annotations:
   
    nginx.ingress.kubernetes.io/rewrite-target: /$1
   
spec:
  tls:
    - secretName: 192-168-49-2-nip-io-tls
      hosts:
        - '*.hello-world.info'

  rules:
    - host: hello-world.info
   
      http:
   
        paths:
   
          - path: /
   
            pathType: Prefix
   
            backend:
   
              service:
   
                name: digienty-envoy-services
   
                port:
   
                  number: 8080
